--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -136,6 +136,9 @@
     <ClCompile Include="RouteCamera.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Vector3.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -247,5 +250,6 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerBullet.h" />
     <ClInclude Include="RouteCamera.h" />
+    <ClInclude Include="Vector3.h" />
   </ItemGroup>
 </Project>
