--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -163,6 +163,9 @@
     <ClCompile Include="GamePad.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ScoreText.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -302,5 +305,6 @@
     <ClInclude Include="Spline.h" />
     <ClInclude Include="BossTargetBullet.h" />
     <ClInclude Include="GamePad.h" />
+    <ClInclude Include="ScoreText.h" />
   </ItemGroup>
 </Project>
