リファクタリング

--- a/MyGame/MyGame.vcxproj
+++ b/MyGame/MyGame.vcxproj
@@ -173,7 +173,7 @@
     <ClCompile Include="FBX\FbxModel.cpp" />
     <ClCompile Include="FBX\FbxObject.cpp" />
     <ClCompile Include="GamePad.cpp" />
-    <ClCompile Include="GameScreen\GameScreen.cpp" />
+    <ClCompile Include="GameScreen\GameScene.cpp" />
     <ClCompile Include="Input\Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OBJ\ObjMaterial.cpp" />
@@ -285,7 +285,7 @@
     <ClInclude Include="FBX\FbxModel.h" />
     <ClInclude Include="FBX\FbxObject.h" />
     <ClInclude Include="GamePad.h" />
-    <ClInclude Include="GameScreen\GameScreen.h" />
+    <ClInclude Include="GameScreen\GameScene.h" />
     <ClInclude Include="Input\Input.h" />
     <ClInclude Include="OBJ\ObjMaterial.h" />
     <ClInclude Include="OBJ\ObjMesh.h" />
