--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -166,6 +166,9 @@
     <ClCompile Include="ScoreText.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="StageObject.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -306,5 +309,6 @@
     <ClInclude Include="BossTargetBullet.h" />
     <ClInclude Include="GamePad.h" />
     <ClInclude Include="ScoreText.h" />
+    <ClInclude Include="StageObject.h" />
   </ItemGroup>
 </Project>
