--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -208,6 +208,9 @@
     <ClCompile Include="Easing.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="FrameWork.cpp">
+      <Filter>EngineBase</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -372,6 +375,9 @@
     </ClInclude>
     <ClInclude Include="StageObject.h">
       <Filter>ヘッダ ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameWork.h">
+      <Filter>EngineBase</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
